--- a/ProjectManagementSystem/Views/Shared/_Layout.cshtml
+++ b/ProjectManagementSystem/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - Project Management System
+            &copy; 2025 - https://github.com/m1lean
         </div>
     </footer>
 
