--- a/ProjectManagementSystem/Views/Tasks/Index.cshtml
+++ b/ProjectManagementSystem/Views/Tasks/Index.cshtml
@@ -41,5 +41,5 @@
     </tbody>
 </table>
 
-<a asp-action="Create" asp-route-projectId="@ViewBag.ProjectId">Create New Task</a>
-<a asp-controller="Projects" asp-action="Details" asp-route-id="@ViewBag.ProjectId">Back to Project</a>
+<a asp-action="Create" asp-route-projectId="@ViewBag.ProjectId" class="btn btn-success me-2">Create New Task</a>
+<a asp-controller="Projects" asp-action="Details" asp-route-id="@ViewBag.ProjectId" class="btn btn-secondary">Back to Project</a>
