--- a/ProjectManagementSystem/Views/Users/Participants.cshtml
+++ b/ProjectManagementSystem/Views/Users/Participants.cshtml
@@ -18,30 +18,37 @@
 
 <h1>Participants for Project</h1>
 
-<table>
-    <thead><tr><th>Name</th><th>Email</th><th>Actions</th></tr></thead>
-    <tbody>
-    @foreach (var user in Model)
-    {
-        <tr>
-            <td>@user.Name</td>
-            <td>@user.Email</td>
-            <td>
-                <form asp-action="RemoveParticipant" method="post" style="display:inline;">
-                    <input type="hidden" name="projectId" value="@ViewBag.ProjectId" />
-                    <input type="hidden" name="userId" value="@user.Id" />
-                    <button type="submit">Remove</button>
-                </form>
-            </td>
-        </tr>
-    }
-    </tbody>
-</table>
+@if (Model != null && Model.Any())
+{
+    <table>
+        <thead><tr><th>Name</th><th>Email</th><th>Actions</th></tr></thead>
+        <tbody>
+        @foreach (var user in Model)
+        {
+            <tr>
+                <td>@user.Name</td>
+                <td>@user.Email</td>
+                <td>
+                    <form asp-action="RemoveParticipant" method="post" style="display:inline;">
+                        <input type="hidden" name="projectId" value="@ViewBag.ProjectId" />
+                        <input type="hidden" name="userId" value="@user.Id" />
+                        <button type="submit">Remove</button>
+                    </form>
+                </td>
+            </tr>
+        }
+        </tbody>
+    </table>
+}
+else
+{
+    <p>No participants found.</p>
+}
 
 <h2>Add Participant</h2>
 <form asp-action="AddParticipant" method="post" class="add-form">
     <input type="hidden" name="projectId" value="@ViewBag.ProjectId" />
-    <select name="userId" asp-items="@(new SelectList(ViewBag.AllUsers, "Id", "Name"))"></select>
+    <select name="userId" asp-items="@(new SelectList(ViewBag.AllUsers ?? new List<ProjectManagementSystem.Models.User>(), "Id", "Name"))"></select>
     <button type="submit">Add</button>
 </form>
 
