--- a/ProjectManagementSystem/Views/Shared/_Layout.cshtml
+++ b/ProjectManagementSystem/Views/Shared/_Layout.cshtml
@@ -9,22 +9,22 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-dark mb-4" style="background: var(--primary-gradient)">
             <div class="container">
-                <a class="navbar-brand" asp-controller="Home" asp-action="Index">Project Management</a>
+                <a class="navbar-brand fw-bold" asp-controller="Home" asp-action="Index">Project Management</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Projects" asp-action="Index">Projects</a>
+                            <a class="nav-link" asp-controller="Projects" asp-action="Index">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Tasks" asp-action="Index">Tasks</a>
+                            <a class="nav-link" asp-controller="Tasks" asp-action="Index">Tasks</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Users" asp-action="Index">Users</a>
+                            <a class="nav-link" asp-controller="Users" asp-action="Index">Users</a>
                         </li>
                     </ul>
                 </div>
